# jogo-ea872

./: .clang-format  .gitignore  Doxyfile  README.md  meson.build  save_game.json
include/: controller.h  general_func.h  json.h  main.h  models.h  view.h
src/: Scenary_elements.cc  character.cc  controller.cc  input.cc  json.cc  main.cc  monster.cc  player.cc  projectiles.cc  scenery_elements.cc  view.cc
